--- a/reader/css/msg.css
+++ b/reader/css/msg.css
@@ -1,73 +1,125 @@
-!function(){
-  var a="@charset \"utf-8\";html{color:#000;background:#fff;overflow-y:scroll;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}html *{outline:0;-webkit-text-size-adjust:none;-webkit-tap-highlight-color:rgba(0,0,0,0)}html,body{font-family:sans-serif}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,hr,button,article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{margin:0;padding:0}input,select,textarea{font-size:100%}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}abbr,acronym{border:0;font-variant:normal}del{text-decoration:line-through}address,caption,cite,code,dfn,em,th,var{font-style:normal;font-weight:500}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:500}q:before,q:after{content:''}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}a:hover{text-decoration:underline}ins,a{text-decoration:none}";
-  var b=document.createElement("style");
-  if(document.getElementsByTagName("head")[0].appendChild(b),b.styleSheet)b.styleSheet.disabled||(b.styleSheet.cssText=a);else try{b.innerHTML=a}catch(c){b.innerText=a}
-}();
-!function(){
-  var a=window;
-  var b=window.lib||(window.lib={});
-  var k=b.flexible||(b.flexible={});
-  function c(){
-    var b=f.getBoundingClientRect().width;
-    b/i>540&&(b=540*i);
-    var c=b/10;
-    f.style.fontSize=c+"px",k.rem=a.rem=c
-  }
-  var d;
-  var e=window.document;
-  var f=window.document.documentElement;
-  var g=window.document.querySelector('meta[name="viewport"]');
-  var h=window.document.querySelector('meta[name="flexible"]')
-  var i=0,j=0;
-  if(g){
-    console.warn("将根据已有的meta标签来设置缩放比例");
-    var l=g.getAttribute("content").match(/initial\-scale=([\d\.]+)/);
-    l&&(j=parseFloat(l[1]),i=parseInt(1/j))
-  }else if(h){
-    var m=h.getAttribute("content");
-    if(m){
-      var n=m.match(/initial\-dpr=([\d\.]+)/),o=m.match(/maximum\-dpr=([\d\.]+)/);
-      n&&(i=parseFloat(n[1]),j=parseFloat((1/i).toFixed(2))),o&&(i=parseFloat(o[1]),j=parseFloat((1/i).toFixed(2)))
-    }
-  }
-  if(!i&&!j){
-    var p=(window.navigator.appVersion.match(/android/gi),window.navigator.appVersion.match(/iphone/gi)),q=window.devicePixelRatio;i=p?q>=3&&(!i||i>=3)?3:q>=2&&(!i||i>=2)?2:1:1,j=1/i
-  }
-  if(f.setAttribute("data-dpr",i),!g)if(g=e.createElement("meta"),g.setAttribute("name","viewport"),g.setAttribute("content","initial-scale="+j+", maximum-scale="+j+", minimum-scale="+j+", user-scalable=no"),f.firstElementChild)f.firstElementChild.appendChild(g);
-  else{
-    var r=e.createElement("div");
-    r.appendChild(g);
-    e.write(r.innerHTML);
-  }
-  window.addEventListener("resize",
-    function(){
-      clearTimeout(d);
-      d=setTimeout(c,300);
-    },
-    !1
-  );
-  window.addEventListener("pageshow",
-    function(a){
-      a.persisted&&(clearTimeout(d),d=setTimeout(c,300))
-    },
-    !1
-  );
-  "complete"===e.readyState?e.body.style.fontSize=12*i+"px":e.addEventListener("DOMContentLoaded",function(){e.body.style.fontSize=12*i+"px"},!1);
-  c();
-  k.dpr=a.dpr=i;
-  k.refreshRem=c;
-  k.rem2px=function(a){
-    var b=parseFloat(a)*this.rem;
-    return "string"==typeof a&&a.match(/rem$/)&&(b+="px"),b
-  };
-  k.px2rem=function(a){
-    var b=parseFloat(a)/this.rem;
-    return "string"==typeof a&&a.match(/px$/)&&(b+="rem"),b
-  }
-}();
+.alert{
+  height:200px;
+  width:200px;
+  display:none;
+  position:fixed;
+  z-index:10000;
+  left:calc((100% - 200px)/2);;
+  top:calc((100% - 200px)/2);
+  border-style:solid;
+  //border:0.1px solid black;
+  background-color:white;
+}
+.alert_head{
+  width:100%;
+  height:24px;
+  display:block;
+  border-style:none none solid none;
+}
+.alert_title{
+  //position:absolute;
+  width:173px;
+  height:24px;
+  float:left;
+  overflow-x:scroll;
+  background-color:0066FF;
+  display:inline;
+}
+.alert_close{
+  //position:absolute;
+  width:24px;
+  height:24px;
+  float:right;
+  display:inline-block;
+  text-align:center;
+  vertical-align:middle;
+  color:rgb(88,0,0);
+  font-weight: bold;
+  font-size:120%;
+  border-color:black;
+  background-color:red;
+  border-style:none none none solid;
+} 
+.alert_body{
+  //position:absolute;
+  display:block;
+  width:100%;
+  height:calc(100%-176px);
+  text-align:center;
+  vertical-align:middle;
+  overflow-y:scroll;
+  //border-style: solid none none none;
+  //border:0.1px solid black;
+}
 
 
 
 
+table,th,td
+{
+    border:1px solid black;
+    //background-color:red;
+}
+td{
+  /*overflow:hidden;
+  	//text-overflow:ellipsis;
+  	white-space:nowrap;*/
+  	word-break:break-all;
+  vertical-align:top;
+  	word-wrap:break-word ;
+}
+table{
+	//height:400px;
+  width:100%;
+  text-align:left;
+}
+table h1,table h2,table h3,table h4,table h5,h6{
+	margin:0;
+	padding:0;
+  font-weight:normal;
+}
+table h1{
+    font-size:1em;
+    background-color:#778899;
+}
 
-
+table h2{
+    font-size:0.8em;
+    background-color:#A0B4CE;
+}
+table h3{
+    font-size:0.5em;
+    background-color:#B0C4DE;
+}
+table h4{
+    font-size:1em;
+    background-color:#A0B4CE;
+}
+table h5{
+    font-size:0.5em;
+    display:none;
+    //background-color:#B0C4DE;
+}
+/*tr:hover td{
+  word-break:break-all;
+  vertical-align:top;
+  	word-wrap:break-word ;
+}*/
+td:hover {
+    background: #666;
+    position:relative;
+    overflow:visible;
+    font-weight:bold;
+    display:block;
+    opacity:1;
+}
+td:hover h1,td:hover h2,td:hover h3,td:hover h4,td:hover h5,h6{
+    //font-size:110%;
+    //background:red;
+    color:white;
+    font-weight:bold;
+    display:block;
+    //overflow:visible;
+    //white-space:wrap;
+    //position:absolute;
+}
